--- a/index.html
+++ b/index.html
@@ -193,6 +193,12 @@
       <img src="img2.jpeg" alt="Imagen 2">
       <img src="img3.jpeg" alt="Imagen 3">
       <img src="img4.jpeg" alt="Imagen 4">
+      <img src="img5.jpeg" alt="Imagen 5">
+      <img src="img6.jpeg" alt="Imagen 6">
+      <img src="img7.jpeg" alt="Imagen 7">
+      <img src="img8.jpeg" alt="Imagen 8">
+      <img src="img9.jpeg" alt="Imagen 9">
+      <img src="img10.jpeg" alt="Imagen 10">
     </div>
   </div>
 
