--- a/index.html
+++ b/index.html
@@ -9,16 +9,9 @@
       padding: 0;
       background: radial-gradient(circle at center, #111 0%, #000 100%);
       font-family: 'Segoe UI', sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: start;
-      min-height: 100vh;
-      padding-top: 20px;
+      overflow-x: hidden;
       color: #ffd700;
       text-align: center;
-      overflow-x: hidden;
-      perspective: 1200px; /* Mejora para efecto 3D */
     }
 
     .ocultar {
@@ -30,8 +23,8 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      width: 320px;
-      height: 200px;
+      width: 280px;
+      height: 180px;
       background: #222;
       border: 2px solid #ffd700;
       border-radius: 12px;
@@ -39,15 +32,14 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      font-size: 1.6em;
+      font-size: 1.5em;
       cursor: pointer;
       z-index: 20;
     }
 
     h1 {
-      font-size: 3em;
-      margin-top: 20px;
-      line-height: 1.2em;
+      font-size: 2.5em;
+      margin-top: 40px;
       text-shadow: 0 0 10px #ffd700;
     }
 
@@ -57,11 +49,11 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 400px;
+      height: 360px;
     }
 
     .imagen-central {
-      width: 380px;
+      width: 300px;
       cursor: pointer;
       transition: transform 0.5s ease;
       animation: balanceo 4s ease-in-out infinite;
@@ -80,15 +72,14 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      width: 90vw;
-      max-width: 500px;
+      width: 320px;
       padding: 20px;
       background: #222;
       border: 2px solid #ffd700;
       border-radius: 12px;
       box-shadow: 0 0 20px rgba(255, 215, 0, 0.4);
-      font-size: 1.3em;
-      line-height: 1.6em;
+      font-size: 1.1em;
+      line-height: 1.5em;
       opacity: 0;
       transition: opacity 1s ease;
       z-index: 5;
@@ -137,47 +128,25 @@
 
     .carrusel-3d {
       margin: 60px auto;
-      width: 400px;
-      height: 250px;
+      width: 300px;
+      height: 200px;
       position: relative;
       transform-style: preserve-3d;
       animation: girar 20s linear infinite;
     }
 
-    .carrusel-3d:hover {
-      animation-play-state: paused;
-    }
-
-    .item {
+    .carrusel-3d img {
       position: absolute;
-      transform-style: preserve-3d;
-      backface-visibility: hidden;
-    }
-
-    .item img {
-      width: 260px;
+      width: 200px;
+      height: auto;
       border-radius: 12px;
       box-shadow: 0 0 10px rgba(255, 215, 0, 0.3);
     }
 
-    .frase {
-      position: absolute;
-      bottom: -40px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(0,0,0,0.6);
-      color: #ffd700;
-      padding: 6px 12px;
-      border-radius: 8px;
-      font-size: 1em;
-      opacity: 0;
-      transition: opacity 0.5s ease;
-      pointer-events: none;
-    }
-
-    .item:hover .frase {
-      opacity: 1;
-    }
+    .carrusel-3d img:nth-child(1) { transform: rotateY(0deg) translateZ(300px); }
+    .carrusel-3d img:nth-child(2) { transform: rotateY(90deg) translateZ(300px); }
+    .carrusel-3d img:nth-child(3) { transform: rotateY(180deg) translateZ(300px); }
+    .carrusel-3d img:nth-child(4) { transform: rotateY(270deg) translateZ(300px); }
 
     @keyframes girar {
       from { transform: rotateY(0deg); }
@@ -212,17 +181,13 @@
     </audio>
 
     <div class="carrusel-3d" id="carrusel">
-      <div class="item"><img src="img1.jpeg"><div class="frase">Tu sonrisa ilumina todo 💛</div></div>
-      <div class="item"><img src="img2.jpeg"><div class="frase">Momentos que guardo en el alma 🌟</div></div>
-      <div class="item"><img src="img3.jpeg"><div class="frase">Eres luz en mi vida ✨</div></div>
-      <div class="item"><img src="img4.jpeg"><div class="frase">Gracias por estar 💐</div></div>
-      <div class="item"><img src="img5.jpeg"><div class="frase">Cada instante contigo vale oro 💫</div></div>
-      <div class="item"><img src="img6.jpeg"><div class="frase">Tu alegría contagia 💖</div></div>
-      <div class="item"><img src="img7.jpeg"><div class="frase">Te celebro hoy y siempre 🎉</div></div>
-      <div class="item"><img src="img8.jpeg"><div class="frase">Eres mi inspiración 🌈</div></div>
-      <div class="item"><img src="img9.jpeg"><div class="frase">Contigo todo es mejor 🌻</div></div>
-      <div class="item"><img src="img10.jpeg"><div class="frase">Este detalle es para ti 💌</div></div>
+      <img src="img1.jpeg" alt="Imagen 1">
+      <img src="img2.jpeg" alt="Imagen 2">
+      <img src="img3.jpeg" alt="Imagen 3">
+      <img src="img4.jpeg" alt="Imagen 4">
     </div>
+  </div>
+
   <script>
     function iniciarSecuencia() {
       document.getElementById('cartaInicial').classList.add('ocultar');
@@ -232,6 +197,7 @@
 
     function mostrarCarta() {
       const contenedor = document.getElementById('contenedor');
+      const ramo = document.getElementById('ramo');
       const carta = document.getElementById('carta');
       const mariposas = document.getElementById('mariposas');
       const carrusel = document.getElementById('carrusel');
@@ -262,26 +228,8 @@
 
       }, 20000);
     }
-
-    // Distribuir automáticamente los ítems del carrusel en cilindro 3D real
-    const carrusel = document.getElementById('carrusel');
-    const items = carrusel.querySelectorAll('.item');
-    const total = items.length;
-    const angulo = 360 / total;
-
-    const imagenAncho = 260; // igual al ancho de cada imagen
-    const espacioEntre = 20; // margen visual entre imágenes
-    const radio = Math.round((imagenAncho + espacioEntre) / (2 * Math.tan(Math.PI / total)));
-
-    items.forEach((item, i) => {
-      const rotacion = i * angulo;
-      item.style.transform = `rotateY(${rotacion}deg) translateZ(${radio}px)`;
-    });
   </script>
+
 </body>
 </html>
-
-
-
-
 
